# scrapli_transfer_utils

./: LICENSE  README.md  pyproject.toml
scrapli_transfer_utils/: __init__.py  dataclasses.py  factory.py
scrapli_transfer_utils/async_transfer/: base.py
scrapli_transfer_utils/async_transfer/asyncscp/: cisco_iosxe.py
scrapli_transfer_utils/async_transfer/asyncsftp/: huawei_vrp.py
tests/: conftest.py  niels.py  test_base.py  test_factory.py  test_huawei_vrp_sftp.py  test_iosxe_scp.py
tests/files/: test.txt  test_file.txt
tests/scrapli_replay_sessions/: test_async_file_transfer_iosxe_succes.yaml  test_async_file_transfer_vrp_fail.yaml  test_async_file_transfer_vrp_succes.yaml  test_check_device_file_huawei_vrp_fail.yaml  test_check_device_file_huawei_vrp_succes.yaml  test_check_device_file_iosxe_fail.yaml  test_check_device_file_iosxe_succes.yaml  test_check_local_file_succes.yaml  test_cleanup_after_transfer_vrp_false.yaml  test_cleanup_after_transfer_vrp_true.yaml  test_ensure_transfer_capability_iosxe_force.yaml  test_ensure_transfer_capability_iosxe_force_false_but_config.yaml  test_ensure_transfer_capability_iosxe_force_false_but_no_config.yaml  test_ensure_transfer_capability_iosxe_true_window_size.yaml  test_ensure_transfer_capability_vrp_force.yaml  test_ensure_transfer_capability_vrp_force_false_but_config.yaml  test_ensure_transfer_capability_vrp_force_false_but_no_config.yaml  test_file_transfer_all_opts.yaml  test_file_transfer_all_overwrite_false.yaml  test_get_device_fs_vrp.yaml
