[tool.poetry]
name = "scrapli-transfer-utils"
version = "0.1.0"
description = ""
authors = ["niels van hooij <niels.vanhooij@kpn.com>"]
readme = "README.md"
packages = [{include = "scrapli_transfer_utils"}]

[tool.poetry.dependencies]
python = "^3.7"
scrapli = "^2023.1.30"
scrapli-community = "^2023.1.30"
aiofiles = "^23.1.0"
asyncssh = "^2.13.2"
pytest = "^7.4.0"
scrapli-replay = "^2023.1.30.post1"
pytest-asyncio = "^0.21.1"
coverage = "^7.2.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
