[tool.poetry]
name = "scrapli-transfer-utils"
version = "0.1.0"
description = ""
authors = ["niels van hooij <niels.vanhooij@kpn.com>"]
readme = "README.md"
packages = [{include = "scrapli_transfer_utils"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
scrapli = "^2023.7.30"
scrapli-community = "^2023.7.30"
aiofiles = "^23.2.1"
asyncssh = "^2.14.1"
pytest = "^7.4.0"
scrapli-replay = "^2023.7.30"
pytest-asyncio = "^0.21.1"
coverage = "^7.2.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
