[tool.poetry]
name = "scrapli-transfer-utils"
version = "0.2.0"
description = ""
authors = ["niels van hooij <niels.vanhooij@kpn.com>"]
readme = "README.md"
packages = [{include = "scrapli_transfer_utils"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
aiofiles = "^23.2.1"
coverage = "^7.2.7"
scrapli = "^2024.1.30"
scrapli-community = "^2024.1.30"
scrapli-replay = "^2024.1.30"
asyncssh = "^2.14.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
